Alterações nos códigos Home.css, e html

--- a/Home.html
+++ b/Home.html
@@ -44,15 +44,50 @@
     </nav>
 
     <!-- Modal da Navbar -->
+    <!-- <div class="modal fade" id="meuModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Nome do Usuário | Gênero</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="text-center">
+                        <img src="PerfilFoto.jpg" class="rounded-circle" alt="User Avatar" style="width: 150px;">
+                        <h5 class="mt-2">Idade</h5>
+                    </div>
+                    <hr>
+                    <p><strong>CPF:</strong> 123.456.789-09</p>
+                    <p><strong>Email:</strong> emailteste@gmail.com</p>
+                    <p><strong>Telefone:</strong> +55 00 1234-5678</p>
+                    <p><strong>Tipo Sanguíneo:</strong> 0+</p>
+                    <hr>
+                    <p><strong>Biografia/Recado:</strong> Adicione aqui a biografia ou recado do usuário.</p>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
     <div class="modal fade" id="meuModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalLabel">Título do Modal</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    Conteúdo do modal...
+                    <div class="text-center Usuario">
+                        <img src="PerfilFoto.jpg" class="rounded-circle" alt="Foto Usuário"
+                            style="width: 190px; height: 190px;">
+                        <h5 class="mt-2">Nome do Usuário | Gênero</h5>
+                        <p>Adicione aqui a biografia ou recado do usuário.</p>
+                    </div>
+                    <div class="text-left Informacoes">
+                        <hr>
+                        <p><strong>CPF:</strong> 123.456.789-09</p>
+                        <p><strong>Email:</strong> emailteste@gmail.com</p>
+                        <p><strong>Telefone:</strong> +55 00 1234-5678</p>
+                        <p><strong>Tipo Sanguíneo:</strong> 0+</p>
+                    </div>
                 </div>
             </div>
         </div>
