--- a/Login.html
+++ b/Login.html
@@ -41,7 +41,9 @@
     <p class="Entrar"><a href="url-entrar" target="_blank">Entrar</a></p>
     <p class="CriarNovaConta"><a href="url-criarnovaconta" target="_blank">Criar Nova Conta</a></p>
   </div>
-  <p class="EsqueceuSenha"><a href="url-esqueceu" target="_blank">Esqueceu a senha ?</a></p>
+  <div class="EsqueceuSenha">
+  <a href="url-esqueceu" target="_blank">Esqueceu a senha ?</a>
+  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
