--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <!-- Link do Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Link do CSS -->
     <link rel="stylesheet" href="Home.css">
 
@@ -17,9 +20,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300&family=Roboto:wght@100;400&display=swap"
         el="stylesheet">
-
-    <!-- Link do Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- link do FontAwesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg Navbar">
         <div class="container-fluid">
 
-            <button class="btn text-white" data-bs-toggle="modal" data-bs-target="#meuModal">
+            <button class="btn text-white" data-bs-toggle="modal" data-bs-target="#Modal">
                 <i class="fa fa-ellipsis-v"></i>
             </button>
 
@@ -42,84 +42,64 @@
             </a>
         </div>
     </nav>
-
-    <!-- Modal da Navbar -->
-    <!-- <div class="modal fade" id="meuModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    
+    <!-- Modal -->
+    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalLabel">Nome do Usuário | Gênero</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="text-center">
-                        <img src="PerfilFoto.jpg" class="rounded-circle" alt="User Avatar" style="width: 150px;">
-                        <h5 class="mt-2">Idade</h5>
+            <div class="modal-content ModalConteudo">
+                <div class="Usuario">
+                    <div class="modal-body">
+                        <button type="button" class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <div class="text-center">
+                            <img src="PerfilFoto.jpg" class="rounded-circle border border-5" alt="FotoUsuário.png">
+                            <h5 class="mt-2">Nome | Gênero <br>Idade</h5>
+                            <p>Adicione aqui a biografia ou recado do usuário.</p>
+                        </div>
                     </div>
-                    <hr>
+                </div>
+                <div class="text-left Informacoes">
                     <p><strong>CPF:</strong> 123.456.789-09</p>
-                    <p><strong>Email:</strong> emailteste@gmail.com</p>
-                    <p><strong>Telefone:</strong> +55 00 1234-5678</p>
-                    <p><strong>Tipo Sanguíneo:</strong> 0+</p>
                     <hr>
-                    <p><strong>Biografia/Recado:</strong> Adicione aqui a biografia ou recado do usuário.</p>
+                    <p><strong>Email:</strong> emailteste@gmail.com</p>
+                    <hr>
+                    <p><strong>Telefone:</strong> +55 00 1234-5678</p>
+                    <hr>
+                    <p><strong>Tipo Sanguíneo:</strong> O+</p>
+                    <hr>
                 </div>
-            </div>
-        </div>
-    </div> -->
-
-    <div class="modal fade" id="meuModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="text-center Usuario">
-                        <img src="PerfilFoto.jpg" class="rounded-circle" alt="Foto Usuário"
-                            style="width: 190px; height: 190px;">
-                        <h5 class="mt-2">Nome do Usuário | Gênero</h5>
-                        <p>Adicione aqui a biografia ou recado do usuário.</p>
-                    </div>
-                    <div class="text-left Informacoes">
-                        <hr>
-                        <p><strong>CPF:</strong> 123.456.789-09</p>
-                        <p><strong>Email:</strong> emailteste@gmail.com</p>
-                        <p><strong>Telefone:</strong> +55 00 1234-5678</p>
-                        <p><strong>Tipo Sanguíneo:</strong> 0+</p>
-                    </div>
+                <div class="Icones">
+                    <a href="Login.html" class="btn btn-outline BotaoIcone">
+                        <i class="fas fa-power-off"></i>
+                    </a>
+                    <a href="url_das_configuracoes" class="btn btn-outline BotaoIcone">
+                        <i class="fas fa-cog"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Cartão Vacinas-->
-    <div class="container mt-5">
-        <div class="card border-0 Cartao1">
+    <!-- Cartões Vacinas, Medicamentos, Patologias-->
+    <div class="container mt-5 Cartoes">
+        <div class="card border-0 Cartao">
             <img src="Vacina.png" class="card-img-top border border-bottom-0 border-5" alt="Vacina.png">
-            <div class="card-body border border-top-0 border-5 Cartao1Corpo">
+            <div class="card-body border border-top-0 border-5 CartaoCorpo">
                 <h5 class="card-title CartaoTitulo">Vacinas</h5>
                 <a href="URL/do/seu/destino" target="_blank" class="btn CartaoBotao">Visualizar</a>
             </div>
         </div>
-    </div>
 
-    <!-- Cartão Medicamentos-->
-    <div class="container mt-5">
-        <div class="card border-0 Cartao2">
+        <div class="card border-0 Cartao">
             <img src="Medicamento.png" class="card-img-top border border-bottom-0 border-5" alt="Medicamento.png">
-            <div class="card-body border border-top-0 border-5 Cartao2Corpo">
+            <div class="card-body border border-top-0 border-5 CartaoCorpo">
                 <h5 class="card-title CartaoTitulo">Medicamentos</h5>
                 <a href="URL/do/seu/destino" target="_blank" class="btn CartaoBotao">Visualizar</a>
             </div>
         </div>
-    </div>
 
-    <!-- Cartão Patologias-->
-    <div class="container mt-5">
-        <div class="card border-0 Cartao3">
+        <div class="card border-0 Cartao">
             <img src="Patologia.png" class="card-img-top border border-bottom-0 border-5" alt="Patologia.png">
-            <div class="card-body border border-top-0 border-5 Cartao3Corpo">
+            <div class="card-body border border-top-0 border-5 CartaoCorpo">
                 <h5 class="card-title CartaoTitulo">Patologias</h5>
                 <a href="URL/do/seu/destino" target="_blank" class="btn CartaoBotao">Visualizar</a>
             </div>
