Modificações e adicionamento de páginas para os cartões

--- a/Login.html
+++ b/Login.html
@@ -38,7 +38,7 @@
 
 
   <div class="Entradas2">
-    <p class="Entrar"><a href="url-entrar" target="_blank">Entrar</a></p>
+    <p class="Entrar"><a href="Home.html">Entrar</a></p>
     <p class="CriarNovaConta"><a href="url-criarnovaconta" target="_blank">Criar Nova Conta</a></p>
   </div>
   <div class="EsqueceuSenha">
