--- a/Medicamento.html
+++ b/Medicamento.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Registro Saúde</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Medicamentos</title>
 
     <!-- Link do Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +14,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Link do CSS -->
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="Medicamento.css">
 
     <!-- Link da Fonte Montserrat -->
     <link
@@ -23,7 +23,6 @@
 
     <!-- link do FontAwesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -36,7 +35,7 @@
                 <i class="fa fa-ellipsis-v"></i>
             </button>
 
-            <a class="navbar-brand NavbarTitulo" href="Login.html">
+            <a class="navbar-brand NavbarTitulo" href="Home.html">
                 <img src="Logo.png" alt="Logo" width="30" height="25" class="d-inline-block align-text-top">
                 Registro Saúde
             </a>
@@ -52,7 +51,7 @@
                         <div class="text-center">
                             <img src="PerfilFoto.jpg" class="rounded-circle border border-5" alt="FotoUsuário.png">
                             <br>
-                            <div class="">
+                            <div class="UsuarioInfo">
                                 <span class="mt-2">Nome</span>
                                 <span class="mt-2">Gênero</span>
                                 <span class="mt-2">Idade</span>
@@ -84,32 +83,39 @@
         </div>
     </div>
 
-    <!-- Cartões Vacinas, Medicamentos, Patologias-->
-    <div class="container mt-5 Cartoes">
-        <div class="card border-0 Cartao">
-            <img src="Vacina.png" class="card-img-top border border-bottom-0 border-5" alt="Vacina.png">
-            <div class="card-body border border-top-0 border-5 CartaoCorpo">
-                <h5 class="card-title CartaoTitulo">Vacinas</h5>
-                <a href="Vacina.html" class="btn CartaoBotao">Visualizar</a>
-            </div>
+    <div class="text-center Campo">
+        <h3>Cadastro de Medicamentos</h3>
+        <h4>Nome da Medicação</h4>
+        <div class="input-group my-3">
+            <input type="text" class="form-control border-secondary rounded-0" placeholder="Digite o nome do medicamento"
+                aria-describedby="button-addon2" />
         </div>
 
-        <div class="card border-0 Cartao">
-            <img src="Medicamento.png" class="card-img-top border border-bottom-0 border-5" alt="Medicamento.png">
-            <div class="card-body border border-top-0 border-5 CartaoCorpo">
-                <h5 class="card-title CartaoTitulo">Medicamentos</h5>
-                <a href="Medicamento.html" class="btn CartaoBotao">Visualizar</a>
-            </div>
+        <h4>Início da Medicação</h4>
+        <div class="input-group my-3">
+            <input type="date" class="form-control border-secondary rounded-0"
+                aria-describedby="button-addon2" />
         </div>
 
-        <div class="card border-0 Cartao">
-            <img src="Patologia.png" class="card-img-top border border-bottom-0 border-5" alt="Patologia.png">
-            <div class="card-body border border-top-0 border-5 CartaoCorpo">
-                <h5 class="card-title CartaoTitulo">Patologias</h5>
-                <a href="Patologia.html" class="btn CartaoBotao">Visualizar</a>
-            </div>
+        <h4>Término da Medicação</h4>
+        <div class="input-group my-3">
+            <input type="date" class="form-control border-secondary rounded-0"
+            aria-describedby="button-addon2" />
         </div>
+        <button class="Botao">Cadastrar Medicamento</button> 
     </div>
+
+    <!-- <div class="container">
+        <div class="card">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Vacina</li>
+                <li class="list-group-item">Data de vacinação</li>
+                <li class="list-group-item">Valência</li>
+            </ul>
+        </div>
+    </div> -->
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
