Organização em pastas

--- a/Html/Home.html
+++ b/Html/Home.html
@@ -14,7 +14,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Link do CSS -->
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="/Css/Home.css">
 
     <!-- Link da Fonte Montserrat -->
     <link
@@ -36,8 +36,8 @@
                 <i class="fa fa-ellipsis-v"></i>
             </button>
 
-            <a class="navbar-brand NavbarTitulo" href="Login.html">
-                <img src="Logo.png" alt="Logo" width="30" height="25" class="d-inline-block align-text-top">
+            <a class="navbar-brand NavbarTitulo" href="/Html/Login.html">
+                <img src="/Resources/Logo.png" alt="Logo" width="30" height="25" class="d-inline-block align-text-top">
                 Registro Saúde
             </a>
         </div>
@@ -50,7 +50,7 @@
                 <div class="Usuario">
                     <div class="modal-body">
                         <div class="text-center">
-                            <img src="PerfilFoto.jpg" class="rounded-circle border border-5" alt="FotoUsuário.png">
+                            <img src="/Resources/PerfilFoto.jpg" class="rounded-circle border border-5" alt="FotoUsuário.png">
                             <br>
                             <div class="">
                                 <span class="mt-2">Nome</span>
@@ -73,7 +73,7 @@
                     <hr>
                 </div>
                 <div class="Icones">
-                    <a href="Login.html" class="btn btn-outline BotaoIcone">
+                    <a href="/Html/Login.html" class="btn btn-outline BotaoIcone">
                         <i class="fas fa-power-off"></i>
                     </a>
                     <a href="url_das_configuracoes" class="btn btn-outline BotaoIcone">
@@ -88,26 +88,26 @@
         <!-- Cartões Vacinas, Medicamentos, Patologias-->
         <div class="container Cartoes">
             <div class="card border-0 Cartao">
-                <img src="Vacina.png" class="card-img-top border border-bottom-0 border-5" alt="Vacina.png">
+                <img src="/Resources/Vacina.png" class="card-img-top border border-bottom-0 border-5" alt="Vacina.png">
                 <div class="card-body border border-top-0 border-5 CartaoCorpo">
                     <h5 class="card-title CartaoTitulo">Vacinas</h5>
-                    <a href="Vacina.html" class="btn CartaoBotao">Visualizar</a>
+                    <a href="/Html/Vacina.html" class="btn CartaoBotao">Visualizar</a>
                 </div>
             </div>
 
             <div class="card border-0 Cartao">
-                <img src="Medicamento.png" class="card-img-top border border-bottom-0 border-5" alt="Medicamento.png">
+                <img src="/Resources/Medicamento.png" class="card-img-top border border-bottom-0 border-5" alt="Medicamento.png">
                 <div class="card-body border border-top-0 border-5 CartaoCorpo">
                     <h5 class="card-title CartaoTitulo">Medicamentos</h5>
-                    <a href="Medicamento.html" class="btn CartaoBotao">Visualizar</a>
+                    <a href="/Html/Medicamento.html" class="btn CartaoBotao">Visualizar</a>
                 </div>
             </div>
 
             <div class="card border-0 Cartao">
-                <img src="Patologia.png" class="card-img-top border border-bottom-0 border-5" alt="Patologia.png">
+                <img src="/Resources/Patologia.png" class="card-img-top border border-bottom-0 border-5" alt="Patologia.png">
                 <div class="card-body border border-top-0 border-5 CartaoCorpo">
                     <h5 class="card-title CartaoTitulo">Patologias</h5>
-                    <a href="Patologia.html" class="btn CartaoBotao">Visualizar</a>
+                    <a href="/Html/Patologia.html" class="btn CartaoBotao">Visualizar</a>
                 </div>
             </div>
         </div>
